--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/clivepato93/conference-ticket-generator#readme",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.14",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "tailwindcss-filters": "^3.0.0"
   }
 }
